[jdbc] - supports MongoDB via [`rdbms`] commands. See [Database Connection Setup] and [Working With Execution Result] for more details. Not all   `rdbms` commands are yet supported (to be ratified soon!)
Signed-off-by: automike <mikeliucc@users.noreply.github.com>