@@ -19,12 +19,17 @@ package org.nexial.core.plugins.db;
 
 import java.io.File;
 import java.lang.reflect.InvocationTargetException;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.SQLException;
 import java.util.Map;
+import java.util.Properties;
 import javax.sql.DataSource;
 
 import org.apache.commons.beanutils.BeanUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.dbcp2.BasicDataSource;
+import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.nexial.commons.utils.TextUtils;
 import org.nexial.core.model.ExecutionContext;
@@ -33,6 +38,7 @@ import org.nexial.core.utils.ConsoleUtils;
 import org.springframework.beans.BeansException;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
+import org.springframework.jdbc.datasource.SingleConnectionDataSource;
 
 import static java.sql.Connection.TRANSACTION_SERIALIZABLE;
 import static org.nexial.core.NexialConst.Rdbms.*;
@@ -98,13 +104,15 @@ public class DataAccess implements ApplicationContextAware {
         String dbType = context.getStringData(db + OPT_DB_TYPE);
         requiresNotBlank(dbType, "database '" + db + "' is not defined; unable to proceed");
 
-        String className = dbTypes.get(dbType);
+        // support user-defined JDBC Driver ClassName via <db>.JavaClassName
+        String className = dbTypes.containsKey(dbType) ?
+                           dbTypes.get(dbType) : context.getStringData(db + OPT_DB_CLASSNAME);
         requiresNotBlank(className, "no or invalid JDBC driver defined", dbType);
 
         try {
             // make sure required class/jar exists
-            Class.forName(className).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            Class.forName(className).getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
             String message;
             ThirdPartyDriverInfo driverInfo = dbJarInfo.get(dbType);
             if (driverInfo != null) {
@@ -124,6 +132,8 @@ public class DataAccess implements ApplicationContextAware {
         SimpleExtractionDao dao;
         if (StringUtils.equals(dbType, "isam")) {
             dao = resolveIsamDao(db);
+        } else if (StringUtils.equals(dbType, "mongodb")) {
+            dao = resolveMongoDao(db, className);
         } else {
             BasicDataSource newDs = new BasicDataSource();
             newDs.setDriverClassName(className);
@@ -186,5 +196,44 @@ public class DataAccess implements ApplicationContextAware {
         dao.setDataSource(newDs);
         dao.setAutoCommit(context.getBooleanData(db + OPT_DB_AUTOCOMMIT, DEF_AUTOCOMMIT));
         return dao;
+    }
+
+    protected SimpleExtractionDao resolveMongoDao(String db, String className) {
+        String url = context.getStringData(db + OPT_DB_URL);
+        url = StringUtils.prependIfMissing(url, "jdbc:");
+
+        boolean expandDoc = BooleanUtils.toBoolean(context.getStringData(db + OPT_DB_EXPAND_DOC));
+        if (expandDoc && !StringUtils.contains(url, URL_OPT_EXPAND_DOC)) {
+            url = StringUtils.appendIfMissing(url, "?") + URL_OPT_EXPAND_DOC;
+        }
+
+        String username = context.getStringData(db + OPT_DB_USER);
+        String password = context.getStringData(db + OPT_DB_PASSWORD);
+
+        Properties props = new Properties();
+        if (StringUtils.isNotBlank(username) && StringUtils.isNotBlank(password)) {
+            props.put("user", username);
+            props.put("password", password);
+        }
+
+        try {
+            Connection connection = DriverManager.getConnection(url, props);
+            connection.setAutoCommit(true);
+
+            SingleConnectionDataSource newDs = new SingleConnectionDataSource(connection, true);
+            newDs.setAutoCommit(connection.getAutoCommit());
+            newDs.setCatalog(connection.getCatalog());
+            newDs.setUrl(url);
+            newDs.setUsername(username);
+            newDs.setPassword(password);
+
+            MongodbJdbcExtractionDao dao = new MongodbJdbcExtractionDao();
+            dao.setDataSource(newDs);
+            dao.setExpandDoc(expandDoc);
+            dao.setAutoCommit(connection.getAutoCommit());
+            return dao;
+        } catch (SQLException e) {
+            throw new RuntimeException("Unable to set up MongoDB connection: " + e.getMessage());
+        }
     }
 }
